# pytest-misata

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pytest_misata/: __init__.py  plugin.py
tests/: test_plugin.py
