[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-misata"
version = "0.1.0"
description = "pytest fixtures for Misata: deterministic, referentially-intact multi-table test data in one line"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Muhammed Rasin", email = "rasinbinabdulla@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0",
    "misata>=0.8.5",
]
classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/rasinmuhammed/pytest-misata"
Documentation = "https://www.misata.studio/docs/guides/testing"
Engine = "https://github.com/rasinmuhammed/misata"

[project.entry-points.pytest11]
misata = "pytest_misata.plugin"

[tool.hatch.build.targets.wheel]
packages = ["pytest_misata"]
